// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ScalarField falls back on DefaultWidget if the configured widget is undefined 1`] = `
<DefaultWidget
  config={
    Object {
      "widget": "custom",
    }
  }
  formName="test-form"
  locale="pt-br"
  onBlur={[MockFunction]}
  onChange={[MockFunction]}
  onChangeSilent={[MockFunction]}
  onFocus={[MockFunction]}
  path="name"
  schema={
    Object {
      "title": "Name",
      "type": "string",
    }
  }
  setUI={[MockFunction]}
  ui={Object {}}
  value="Andrew"
  widgets={Object {}}
/>
`;

exports[`ScalarField renders 1`] = `
<DefaultWidget
  config={Object {}}
  formName="test-form"
  locale="pt-br"
  onBlur={[MockFunction]}
  onChange={[MockFunction]}
  onChangeSilent={[MockFunction]}
  onFocus={[MockFunction]}
  path="name"
  schema={
    Object {
      "title": "Name",
      "type": "string",
    }
  }
  setUI={[MockFunction]}
  ui={Object {}}
  value="Andrew"
/>
`;

exports[`ScalarField renders custom widget 1`] = `
<Custom
  config={
    Object {
      "widget": "Custom",
    }
  }
  formName="test-form"
  locale="pt-br"
  onBlur={[MockFunction]}
  onChange={[MockFunction]}
  onChangeSilent={[MockFunction]}
  onFocus={[MockFunction]}
  path="name"
  schema={
    Object {
      "title": "Name",
      "type": "string",
    }
  }
  setUI={[MockFunction]}
  ui={Object {}}
  value="Andrew"
  widgets={
    Object {
      "Custom": [Function],
    }
  }
/>
`;
